tests/baselines/reference/checkJsdocTypeTag5.errors.txt
tests/cases/conformance/jsdoc/test.js(3,17): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsdoc/test.js(5,14): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsdoc/test.js(7,24): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsdoc/test.js(10,17): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsdoc/test.js(12,14): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsdoc/test.js(14,24): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/jsdoc/test.js (6 errors) ====
    // all 6 should error on return statement/expression
    /** @type {(x: number) => string} */
    function h(x) { return x }
                    ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    /** @type {(x: number) => string} */
    var f = x => x
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    /** @type {(x: number) => string} */
    var g = function (x) { return x }
                           ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    /** @type {{ (x: number): string }} */
    function i(x) { return x }
                    ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    /** @type {{ (x: number): string }} */
    var j = x => x
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    /** @type {{ (x: number): string }} */
    var k = function (x) { return x }
                           ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    